--- a/css/index.css
+++ b/css/index.css
@@ -577,3 +577,87 @@ ul {
     opacity: 1;
   }
 }
+
+/*mobile*/
+@media (max-width: 500px) {
+  /*header nav {
+    border-top: 5px solid white;
+    display: flex;
+    margin-top: 2%;
+    background-color: purple;
+    width: 88%;
+    border-bottom: 5px solid white;
+    margin-left: 5%;
+  }
+
+  header nav a {
+    display: none;
+    margin: 20px;
+    margin-left: 12%;
+    color: white;
+    font-size: 1.5em;
+    text-decoration: none;
+    margin-top: 4%;
+  }*/
+
+  header .logo {
+    display: flex;
+    margin-left: -27%;
+    margin-top: -2%;
+    margin-right: -6%;
+    width: 23%;
+  }
+
+  .home-img {
+    display: flex;
+    margin-left: -7%;
+    margin-top: -10%;
+    padding: 10%;
+    width: 73%;
+  }
+
+  p {
+    line-height: 1.4;
+    width: 50%;
+    margin-left: 5%;
+  }
+
+  h2 {
+    margin-left: 5%;
+    margin-top: 5%;
+  }
+  .top-content {
+    display: inline-block;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed black;
+  }
+
+  .top-content .text-container {
+    display: inline;
+    padding: 2% 1%;
+    padding-bottom: 20px;
+    margin-left: 2%;
+  }
+
+  footer nav {
+    padding-bottom: 5px;
+  }
+  footer nav a {
+    color: white;
+    padding-right: 20px;
+    text-decoration: none;
+    width: 65%;
+    font-size: 0.5em;
+  }
+
+  footer {
+    background-color: #800080;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding: 5px;
+    width: 50%;
+  }
+}
