--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,6 @@ html,
 body {
   height: 100%;
   font-family: "Snippet", sans-serif;
-  background-color: lightgray;
 }
 
 h1,
@@ -153,18 +152,33 @@ h5 {
 p {
   line-height: 1.4;
 }
+html {
+  background-image: url(/images/bubbleBackground.png);
+  background-size: 50%;
+}
+/*Carmen code starts*/
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+/*Jenn nav container code*/
+.navContainer {
+  display: flex;
+}
 
 header nav {
-  border-top: 5px solid white;
-  display: flex;
-  margin-top: 2%;
-  background-color: purple;
-  width: 88%;
+  background-color: #800080;
+  /*Jenn tweaking width from 88% to 100%*/
+  width: 100%;
   border-bottom: 5px solid white;
+  /*removed to force header to top of screen - Jenn
+  margin-top: 2%;
   margin-left: 5%;
+  border-top: 5px solid white;*/
 }
 
 header nav a {
+  justify-content: space-evenly;
   margin: 20px;
   margin-left: 12%;
   color: white;
@@ -174,38 +188,59 @@ header nav a {
 }
 
 header .logo {
-  display: flex;
+  height: 100px;
   margin-left: 9%;
-  margin-top: -2%;
-  margin-right: -6%;
+  /*margin-top: -2%;
+  margin-right: -6%;*/
 }
-
-.container {
-  width: 800px;
-  margin: 0 auto;
+.mobileNav {
+  display: none;
 }
-
-.home-img {
+/* .home-img {
   display: flex;
   margin-left: -53%;
   margin-top: -10%;
   padding: 10%;
   width: 202%;
-}
+} */
 
 .top-content {
+  margin-top: 25px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-bottom: 20px;
+  padding: 20px 0;
   border-bottom: 1px dashed black;
+  border-top: 1px dashed black;
 }
 
-.top-content .text-container {
-  width: 48%;
-  padding: 2% 1%;
+.tc-left,
+.tc-right {
+  width: 50%;
+  flex-direction: column;
+}
+.tc-left {
+  margin-left: 15px;
+  padding-right: 15px;
+  border-right: 1px dashed black;
+}
+
+.tc-right {
+  margin-left: 15px;
+  padding: 0 15px;
+}
+
+.mainTextContainer .text-container {
+  width: 100%;
+  padding: 0 1%;
   padding-bottom: 20px;
-  margin-left: 2%;
+  display: none;
+  margin-bottom: 20px;
+  border-bottom: 1px dashed black;
+  border-top: 1px dashed black;
+  padding-top: 20px;
+}
+
+.mainTextContainer .text-container.bubbleItemSelected {
+  display: block;
 }
 
 .middle-content .circle {
@@ -215,36 +250,28 @@ header .logo {
   padding-bottom: 10%;
 }
 
-.middle-content .circle .circle1 {
-  width: 32%;
-  height: 274px;
+#circle1 {
+  width: 200px;
+  height: 200px;
   background: #008f95;
   margin: 20px 2.5%;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+  border-radius: 100%;
   font-size: 3.5em;
   text-align: center;
   border: 10px solid white;
 }
 
-.middle-content .circle .circle1:hover {
-  position: relative;
-  top: -15px;
-  left: -35px;
-  width: 40%;
-  height: auto;
-  display: block;
-  z-index: 999;
-  align-items: center;
-  text-align: center;
+#header1 {
+  color: #008f95;
 }
 
-.middle-content .circle .circle2 {
-  width: 32%;
-  height: 274px;
+#circle2 {
+  width: 200px;
+  height: 200px;
   background: #e24e42;
   margin: 20px 2.5%;
   color: white;
@@ -257,21 +284,13 @@ header .logo {
   border: 10px solid white;
 }
 
-.middle-content .circle .circle2:hover {
-  position: relative;
-  top: -15px;
-  left: -35px;
-  width: 40%;
-  height: auto;
-  display: block;
-  z-index: 999;
-  align-items: center;
-  text-align: center;
+#header2 {
+  color: #e24e42;
 }
 
-.middle-content .circle .circle3 {
-  width: 32%;
-  height: 274px;
+#circle3 {
+  width: 200px;
+  height: 200px;
   background: #e9b000;
   margin: 20px 2.5%;
   color: white;
@@ -283,7 +302,53 @@ header .logo {
   text-align: center;
   border: 10px solid white;
 }
+#header3 {
+  color: #e9b000;
+}
 
+#circle4 {
+  width: 200px;
+  height: 200px;
+  background: #eb6e80;
+  margin: 20px 2.5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 3em;
+  text-align: center;
+  border: 10px solid white;
+}
+
+#header4 {
+  color: #eb6e80;
+}
+
+/*Jenn tweaking the bubbles*/
+/*
+.middle-content .circle .circle1:hover {
+  position: relative;
+  top: -15px;
+  left: -35px;
+  width: 400px;
+  height: 400px;
+  display: block;
+  z-index: 999;
+  align-items: center;
+  text-align: center;
+}
+.middle-content .circle .circle2:hover {
+  position: relative;
+  top: -15px;
+  left: -35px;
+  width: 40%;
+  height: auto;
+  display: block;
+  z-index: 999;
+  align-items: center;
+  text-align: center;
+}
 .middle-content .circle .circle3:hover {
   position: relative;
   top: -15px;
@@ -295,22 +360,6 @@ header .logo {
   align-items: center;
   text-align: center;
 }
-
-.middle-content .circle .circle4 {
-  width: 32%;
-  height: 274px;
-  background: #eb6e80;
-  margin: 20px 2.5%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  font-size: 3.5em;
-  text-align: center;
-  border: 10px solid white;
-}
-
 .middle-content .circle .circle4:hover {
   position: relative;
   top: -15px;
@@ -321,7 +370,7 @@ header .logo {
   z-index: 995;
   align-items: center;
   text-align: center;
-}
+}*/
 
 /*Contact*/
 .containerform {
@@ -368,7 +417,7 @@ footer nav a {
 }
 
 /*carousel*/
-.carouselContainer {
+/* .carouselContainer {
   max-width: 100%;
   position: relative;
   margin: auto;
@@ -387,7 +436,7 @@ footer nav a {
 }
 .carouselBtnContainer {
   display: block;
-}
+} */
 
 /*about*/
 .main {
@@ -399,13 +448,13 @@ footer nav a {
   padding: 25px 0;
 }
 .aboutHeader {
-  color: #800080;
+  color: #008f95;
   font-size: 1.5em;
   padding: 0 10px;
 }
 
 .panel {
-  border: 2px solid purple;
+  border: 2px solid #008f95;
   border-radius: 10px;
   padding-top: 15px;
   margin-bottom: 25px;
@@ -423,10 +472,10 @@ footer nav a {
 button.panel-open,
 button.panel-close {
   font-size: 15px;
-  border: 1px solid #800080;
+  border: 1px solid#008f95;
   border-radius: 5px;
   background-color: white;
-  color: #800080;
+  color: #008f95;
 }
 
 .toggle {
@@ -454,6 +503,12 @@ button.panel-close {
   width: 100px;
 }
 
+.about-content {
+  margin-top: 25px;
+  display: flex;
+  padding: 20px 0;
+}
+
 /*pricing*/
 .mainPricing {
   display: block;
@@ -474,14 +529,19 @@ ul {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1500px;
+  width: 100%;
   position: relative;
-  margin: auto;
+  display: flex;
+  padding-top: 20px;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+}
+.home-img {
+  align-content: center;
+  padding-left: 198px;
 }
 
 /* Next & previous buttons */
@@ -580,46 +640,21 @@ ul {
 
 /*mobile*/
 @media (max-width: 500px) {
-  /*header nav {
-    border-top: 5px solid white;
+  .navContainer {
+    display: none;
+  }
+  .mobileNav {
     display: flex;
-    margin-top: 2%;
-    background-color: purple;
-    width: 88%;
-    border-bottom: 5px solid white;
-    margin-left: 5%;
+    padding-left: 20px;
   }
 
-  header nav a {
-    display: none;
-    margin: 20px;
-    margin-left: 12%;
-    color: white;
-    font-size: 1.5em;
-    text-decoration: none;
-    margin-top: 4%;
-  }*/
-
-  header .logo {
-    display: flex;
-    margin-left: -27%;
-    margin-top: -2%;
-    margin-right: -6%;
-    width: 23%;
+  .list {
+    list-style: none;
   }
 
   .home-img {
-    display: flex;
-    margin-left: -7%;
-    margin-top: -10%;
-    padding: 10%;
-    width: 73%;
-  }
-
-  p {
-    line-height: 1.4;
-    width: 50%;
-    margin-left: 5%;
+    width: 100%;
+    padding-left: 0;
   }
 
   h2 {
@@ -627,8 +662,7 @@ ul {
     margin-top: 5%;
   }
   .top-content {
-    display: inline-block;
-    flex-wrap: wrap;
+    display: flex;
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
@@ -645,19 +679,14 @@ ul {
     padding-bottom: 5px;
   }
   footer nav a {
-    color: white;
-    padding-right: 20px;
-    text-decoration: none;
-    width: 65%;
-    font-size: 0.5em;
+    width: 80%;
   }
 
   footer {
-    background-color: #800080;
-    color: white;
+    width: 100%;
+    font-size: 1em;
+  }
+  footer p {
     text-align: center;
-    font-size: 20px;
-    padding: 5px;
-    width: 50%;
   }
 }
